--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,18 @@
-title:            Balzac
+title:            Chuyun Shen
 tagline:          A beautiful theme.
 description:      Describe your website.
 canonical: http://jekyll.gtat.me
 
 # Owner/author information
 owner:
-  name:           Cole Townsend
+  name:           Chuyun Shen
   avatar:         avatar.png
-  bio:            "Aesthete & Athlete"
-  email:          cole@coletownsend.com
-  twitter:        twnsndco
-  github:         coletownsend
+  bio:            "None"
+  email:          chuyun.shen@mail.utoronto.ca
+  github:         chuyunshen
   instagram:      ctrunsthis
-  dribbble:       coletownsend
-  disqus:         balzac
-  location:       "Buffalo, NY"
-  # Plug in your disqus shortname!
+  disqus:         chuyunshen
+  location:       "Toronto, Canada"
 
 tools:
   standards:      "HTML, SCSS, Jekyll"
@@ -31,10 +28,7 @@ links:
   - title: About
     url: /about
   - title: Github
-    url: https://github.com/ColeTownsend/Balzac-for-Jekyll
-    external: true
-  - title: Cole Who?
-    url: http://coletownsend.com
+    url: https://github.com/chuyunshen
     external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
