--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,9 @@ links:
   - title: Github
     url: https://github.com/chuyunshen
     external: true
+  - title: LinkedIn
+    url: https://linkedin.com/in/chuyunshen
+    external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    America/New_York
