--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:            Chuyun Shen
 tagline:          A beautiful theme.
 description:      Describe your website.
-canonical: https://chuyunshen.github.io/chuyun
+canonical: https://chuyunshen.github.io/
 
 # Owner/author information
 owner:
@@ -61,5 +61,3 @@ permalink:   /:categories/:title
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp"]
-
-theme: jekyll-theme-cayman
