Add Dependency Viewer project and make edits to the website

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ owner:
   name:           Chuyun Shen
   avatar:         avatar.png
   bio:            "None"
-  email:          chuyun.shen@mail.utoronto.ca
+  email:          chuyun.shen@outlook.com
   github:         chuyunshen
   disqus:         chuyunshen
   location:       "Toronto, Canada"
